최종 업로드

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						<p class="slide6"><a href="#">6</a></p>
 						<p class="slide7"><a href="#">7</a></p>
 						<p class="slide8"><a href="#">8</a></p>
-	+ 				<p class="slide9"><a href="#">9</a></p>
+						<p class="slide9"><a href="#">9</a></p>
 						<p class="slide10"><a href="#">10</a></p>
 					</div>
 	
